Fixed footer on mobile

--- a/plasma - Copy/plasma.css
+++ b/plasma - Copy/plasma.css
@@ -20,7 +20,8 @@ body {
 	/** Fallback in case JavaScript is disabled **/
 	position:absolute;
 	display:inline-block;
-	box-shadow: 0 1em 1em -1em rgba(0, 0, 0, 1);
+		box-shadow: 0 1em 1em -1em rgba(0, 0, 0, 1);
+	//border: 1px solid gray;
 }
 
 #logo {
@@ -39,6 +40,7 @@ hr {
 #push {
 	position:relative;
 	width: 0.01em;
+	border: 1px solid red;
 }
 
 #plasmacontent {
@@ -46,4 +48,5 @@ hr {
 	display:block;
 	overflow:auto;
 	width:100%;
+	//border: 4px solid red;	
 }
